src/test/deca/syntax/invalid/resultats/test1_empty-synt.res
./src/test/deca/syntax/invalid/test1_empty.deca:15:0: missing '}' at '<EOF>'
